--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,3 +2,6 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
+libs.minim.classpath=\
+    ${base}/minim.jar
+libs.minim.displayName=minim
